completed netflix clone

--- a/websites/netflix/src/components/RowPost/RowPost.css
+++ b/websites/netflix/src/components/RowPost/RowPost.css
@@ -15,7 +15,19 @@
     display: none;
 }
 
-.posters img {
+.poster {
     max-height: 250px;
     margin-right: 10px;
+    cursor: pointer;
+}
+
+.small-poster {
+    max-height: 150px;
+    margin-right: 10px;
+    cursor: pointer;
+}
+
+.poster:hover,
+.small-poster:hover {
+    transform: scale(1.1);
 }
