--- a/websites/airbnb/src/Components/Header/Header.css
+++ b/websites/airbnb/src/Components/Header/Header.css
@@ -53,7 +53,6 @@
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
-
 }
 
 .filter {
@@ -73,6 +72,11 @@
     position: relative;
     padding: 10px;
     margin-top: 16px;
+}
+
+button {
+    background-color: #fff;
+    border: none;
 }
 
 .header-slider {
@@ -137,10 +141,10 @@
     padding: 5px 1px 14px 0;
 }
 
-.element-card.active {
+.element-card:focus {
     opacity: 1;
 }
 
-.element-card.active p {
+.element-card:focus p {
     border-bottom: 2px solid #000;
 }
