--- a/websites/airbnb/src/Components/Header/Header.css
+++ b/websites/airbnb/src/Components/Header/Header.css
@@ -1,7 +1,16 @@
+.header {
+    position: fixed;
+    z-index: 100;
+    background-color: #fff;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+
 .header-top {
     display: block;
     max-width: 743px;
-    margin: 10px 10px 0 22px;
+    margin: 14px 10px 0 22px;
     padding: 8px 10px;
     border: 1px solid #eee;
     border-radius: 50px;
