--- a/react/exercise/src/App.css
+++ b/react/exercise/src/App.css
@@ -15,12 +15,34 @@ button {
 
 }
 
+
+.close {
+  position: absolute;
+  top: 12px;
+  right: 10px;
+  padding: 5px;
+  margin: 0;
+  width: 30px;
+  transform: translateX(100px);
+
+}
+
+.container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
 .show,
 .displ {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  padding: 30px;
+  top: 40%;
+  left: 70%;
   background-color: yellow;
+  width: 300px;
+  height: 200px;
   /* z-index: 2; */
 }
